samples/_failures_safe/1761303387_55a31d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2e794d63.c: In function ‘main’:
./samples/SAFE/__tmp_2e794d63.c:155:17: error: expected expression at end of input
  155 |                 } else if (status == -
      |                 ^
./samples/SAFE/__tmp_2e794d63.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2e794d63.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2e794d63.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2e794d63.c:155:17: error: expected declaration or statement at end of input
